--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,10 @@
 {
     "require": {
-        "slim/slim": "^3.6",
         "hassankhan/config": "^0.10.0"
+    },
+    "require-dev": {
+        "slim/slim": "^3.6",
+        "symfony/yaml": "^3.1"
     },
     "autoload": {
         "psr-4": {
