--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,31 @@
 {
+    "name": "flexsounds/slim-container-builder",
+    "description": "A light weight container builder from a configuration file",
+    "type": "library",
     "require": {
         "hassankhan/config": "^0.10.0"
     },
     "require-dev": {
         "slim/slim": "^3.6",
-        "symfony/yaml": "^3.1"
+        "symfony/yaml": "^3.1",
+        "phpunit/phpunit": "^4.8"
     },
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Leroy Baeyens",
+            "email": "info@leroybaeyens.nl"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Flexsounds\\Slim\\ContainerBuilder\\": "src/"
+        }
+    },
+    "minimum-stability": "stable",
+    "autoload-dev": {
+        "psr-4": {
+            "Flexsounds\\Slim\\ContainerBuilder\\Tests\\": "tests/"
         }
     }
 }
