--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,7 @@ install:
   - composer install
 
 script:
-  - phpunit
+  - phpunit --coverage-clover .build/logs/clover.xml
+
+after_success:
+  - travis_retry php vendor/bin/coveralls
