--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - composer install
 
 script:
-  - phpunit --coverage-clover .build/logs/clover.xml
+  - phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
   - travis_retry php vendor/bin/coveralls
