--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ install:
   - composer install
 
 script:
-  - phpunit --coverage-clover build/logs/clover.xml
+  - mkdir -p build/logs
+  - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
   - travis_retry php vendor/bin/coveralls
