--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ php:
 
 install:
   - composer install
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then composer require codeclimate/php-test-reporter satooshi/php-coveralls -n --dev ; fi
 
 script:
   - mkdir -p build/logs
   - php vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_success:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then php vendor/bin/coveralls -v ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then php vendor/bin/test-reporter ; fi
 
