--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     "require-dev": {
         "slim/slim": "^3.6",
         "symfony/yaml": "^3.1",
-        "phpunit/phpunit": "^4.8",
-        "satooshi/php-coveralls": "dev-master"
+        "phpunit/phpunit": "^4.8"
     },
     "license": "MIT",
     "authors": [
