Renamed the factory service key to `shared` to comply with the symfony service definition 'interface'

--- a/tests/fixtures/config.yml
+++ b/tests/fixtures/config.yml
@@ -11,3 +11,7 @@ services:
     class: 'Flexsounds\Slim\ContainerBuilder\Tests\fixtures\DummyClass'
     arguments:
       - '@settings'
+
+  test.non.shared.service:
+    class: 'Flexsounds\Slim\ContainerBuilder\Tests\fixtures\DummyClass'
+    shared: false
