Changed a test config-file fixture to have a class name from a parameter. Fixed the parseParmaters method to comply with the symfony parameters interface

--- a/tests/fixtures/config.yml
+++ b/tests/fixtures/config.yml
@@ -1,6 +1,9 @@
+parameters:
+  test.dummy.class: 'Flexsounds\Slim\ContainerBuilder\Tests\fixtures\DummyClass'
+
 services:
   test.hello.world:
-    class: 'Flexsounds\Slim\ContainerBuilder\Tests\fixtures\DummyClass'
+    class: %test.dummy.class%
 
   test.argument.with.service:
     class: 'Flexsounds\Slim\ContainerBuilder\Tests\fixtures\DummyClass'
